🔧 整合blackmatrix7的重写脚本 📦 添加了脚本 🎨 将APP_Vip独立

--- a/config.conf
+++ b/config.conf
@@ -1,5 +1,5 @@
 # 小康整合 - https://xiaokang.me
-# Time: 2020-10-15
+# Time: 2020-10-17
 # QuantumultX 懒人配置DIY版 【作者】w37fhy 【电报频道】https://t.me/w37fhy【更新日期】2020/9/11
 # 【YouTube视频教程】 QuantumultX 系列教程：https://fhyurl.tk/quantumultx
 # 【更新内容】：
@@ -61,10 +61,10 @@ static=🚀 IPLC, proxy, direct, 🚀 节点选择, img-url=https://raw.githubus
 static=🎥 奈飞视频, proxy, direct, 🚀 节点选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Netflix.png
 static=🙈 网易云音乐, 解锁网易云音乐, 🚀 节点选择, DIRECT, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Netease_Music.png
 # static=🇭🇰 香港节点, server-tag-regex=(?=.*(香港|HK|(?i)Hong))^((?!(专线|手游|游戏|(?i)IPLC|IEPL|game)).)*$, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Hong_Kong.png
-static=🚀𝐒𝐩𝐞𝐞𝐝𝐓𝐞𝐬𝐭,proxy, direct, img-url= https://raw.githubusercontent.com/Orz-3/mini/master/Speedtest.png
-static=📱𝐓𝐞𝐥𝐞𝐠𝐫𝐚𝐦, proxy, direct, img-url= https://raw.githubusercontent.com/Orz-3/mini/master/Telegram.png
-static=🎬𝐘𝐨𝐮𝐓𝐮𝐛𝐞, proxy, direct, img-url= https://raw.githubusercontent.com/Orz-3/mini/master/YouTube-W.png
-static=🔞𝐏𝐨𝐫𝐧𝐇𝐮𝐛, proxy, direct,REJECT, img-url= https://raw.githubusercontent.com/Orz-3/mini/master/Pornhub.png
+static=🚀𝐒𝐩𝐞𝐞𝐝𝐓𝐞𝐬𝐭,proxy, direct,🚀 节点选择, img-url= https://raw.githubusercontent.com/Orz-3/mini/master/Speedtest.png
+static=📱𝐓𝐞𝐥𝐞𝐠𝐫𝐚𝐦, proxy, direct,🚀 节点选择, img-url= https://raw.githubusercontent.com/Orz-3/mini/master/Telegram.png
+static=🎬𝐘𝐨𝐮𝐓𝐮𝐛𝐞, proxy, direct,🚀 节点选择, img-url= https://raw.githubusercontent.com/Orz-3/mini/master/YouTube-W.png
+static=🔞𝐏𝐨𝐫𝐧𝐇𝐮𝐛, proxy, direct,REJECT,🚀 节点选择, img-url= https://raw.githubusercontent.com/Orz-3/mini/master/Pornhub.png
 static=🌏 国外网站, proxy, direct, 🚀 节点选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Global.png
 static=💻 国外影视, proxy, direct, 🚀 节点选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/ForeignMedia.png
 static=🎯 全球直连, DIRECT, 🚀 节点选择, ♻️ 自动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Direct.png
@@ -108,10 +108,16 @@ https://raw.githubusercontent.com/mjjmjj/Personal-QX/main/Rewrite/boxJs.conf, ta
 # q搜索
 # 来源于 https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Q-Search_All_in_one.conf
 https://raw.githubusercontent.com/mjjmjj/Personal-QX/main/Rewrite/qSearch.conf, tag=Q-Search, enabled=true
-
-
-#下面两条去广告订阅默认禁用，开启后会写入大量的重写规则和主机名，非去广告重度用户建议保持禁用！
-https://raw.githubusercontent.com/mjjmjj/Personal-QX/main/Rewrite/AD.conf, tag=整合版去广告, update-interval=86400, opt-parser=false, enabled=true
+# 滴滴出行获取Cookie
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/didichuxing/didi_checkin.qxrewrite, tag=滴滴出行_获取Cookie, enabled=true
+# 什么值得买
+5 0 * * * https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/smzdm/smzdm_checkin.js, tag=什么值得买每日签到
+#nzw9314整合版（不包含boxjs）
+#https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Js.conf
+https://raw.githubusercontent.com/mjjmjj/Personal-QX/main/Rewrite/app.conf, tag=nzw9314整合版, update-interval=86400, opt-parser=false, enabled=true
+#blackmatrix7整合版
+#https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rewrite/QuantumultX/Advertising/Advertising.conf
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rewrite/QuantumultX/Advertising/Advertising.conf, tag=blackmatrix7整合版, update-interval=86400, opt-parser=false, enabled=true
 
 #⚠️ 注意：TikTok 区域解锁重写一次只可启用一个，不可多个地区同时使用。
 #默认为日本区，可直接替换下面地址中最后的TikTokJP.conf为TikTokKR.conf或者TikTokTW.conf或者TikTokUK.conf
@@ -120,7 +126,6 @@ https://raw.githubusercontent.com/mjjmjj/Personal-QX/main/Rewrite/TikTok/TikTokT
 https://raw.githubusercontent.com/mjjmjj/Personal-QX/main/Rewrite/TikTok/TikTokKR.conf, tag=TikTok韩国解锁, update-interval=86400, opt-parser=false, enabled=false
 https://raw.githubusercontent.com/mjjmjj/Personal-QX/main/Rewrite/TikTok/TikTokUS.conf, tag=Tiktok美国解锁, update-interval=86400, opt-parser=false, enabled=false
 https://raw.githubusercontent.com/mjjmjj/Personal-QX/main/Rewrite/TikTok/TikTokUK.conf, tag=Tiktok英国解锁, update-interval=86400, opt-parser=false, enabled=false
-#上述如果失效，用下面这个！
 [server_local]
 #解锁网易云音乐节点
 http=106.52.127.72:19951, fast-open=false, udp-relay=false, tag= 解锁网易云音乐
@@ -144,36 +149,8 @@ https:\/\/((weather-data\.apple)|(api.weather))\.com url script-request-header h
 #google
 ^https?:\/\/(www.)?(g|google)\.cn url 302 https://www.google.com
 
-#京东获取Cookie
-https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
-
 # 京东价格提醒(By toulanboy)
 ^https:\/\/apapia-history\.manmanbuy\.com\/ChromeWidgetServices\/WidgetServices\.ashx url script-request-body https://raw.githubusercontent.com/toulanboy/scripts/master/jd_price_detect/jd_price_detect.js
-
-#Bilibili获取Cookie
-^https:\/\/(www|live)\.bilibili\.com\/?.? url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/bilibili/bilibili.cookie.js
-
-#网易云音乐Cookie
-^https:\/\/music.163.com\/weapi\/user\/level url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/neteasemusic/neteasemusic.cookie.js
-
-#中国联通Cookie
-# 注意获取Cookie有两条脚本
-^https?:\/\/act.10010.com\/SigninApp\/signin\/querySigninActivity.htm url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.cookie.js
-^https?:\/\/act.10010.com\/SigninApp(.*?)\/signin\/daySign url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.cookie.js
-^https?:\/\/m.client.10010.com\/dailylottery\/static\/(textdl\/userLogin|active\/findActivityInfo) url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.cookie.js
-
-#中国电信Cookie
-^https:\/\/wapside.189.cn:9001\/api\/home\/homeInfo url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/10000/10000.cookie.js
-
-#中国移动Cookie
-^http:\/\/wx.10086.cn\/website\/taskCenter\/index\? url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.cookie.js
-^http:\/\/wx.10086.cn\/website\/taskCenter\/sign\? url script-request-header https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.cookie.js
-
-#爱奇艺Cookie
-^https?:\/\/iface\d\.iqiyi\.com\/ url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js
-
-#快手极速版Cookie
-https:\/\/nebula\.kuaishou\.com\/rest\/n\/nebula\/activity\/earn\/overview url script-request-header https://raw.githubusercontent.com/Sunert/Scripts/master/Task/kuaishou.js
 
 #机场签到Cookie
 https:\/\/cccat\.io url script-request-header https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/glados/checkincookie_env.js
@@ -193,19 +170,21 @@ https:\/\/cccat\.io url script-request-header https://raw.githubusercontent.com/
 ^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/(feed|aweme\/post|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/ url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Aweme.js
 ^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/(feed|aweme\/post|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/ url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Aweme.js
 
-# Chavy box (多账号Cookie保存切换)
-# 访问:  http://boxjs.com 管理
-^https?://boxjs.com/api url script-request-body https://gitee.com/chavyleung/scripts/raw/master/chavy.box.js
-^https?://boxjs.com(/home|/sub|/my|/app|/log|/revert)?($|\/) url script-echo-response https://gitee.com/chavyleung/scripts/raw/master/chavy.box.js
-
 [task_local]
+## 什么值得买
+# https://github.com/blackmatrix7/ios_rule_script/tree/master/script/smzdm
+5 0 * * * https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/smzdm/smzdm_checkin.js, tag=什么值得买每日签到
+
+## 滴滴出行
+# https://github.com/blackmatrix7/ios_rule_script/tree/master/script/didichuxing
+05 0 * * * https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/didichuxing/didi_checkin.js, tag=滴滴出行_每日签到, enabled=true
+
 # 彩云天气 (By Peng-YM)
 # 打开手机设置 > 隐私 > 定位服务
 # (1) 打开定位服务
 # (2) 选择天气，设置永远允许天气访问位置信息，并允许使用精确位置。
 # (3) 打开box.js设置API token即可。
 0 0-21/3 * * * https://raw.githubusercontent.com/Peng-YM/QuanX/master/Tasks/caiyun.js, tag=彩云天气, img-url=https://raw.githubusercontent.com/Orz-3/task/master/caiyun.png, enabled=false
-
 
 # 天气+生活指数+降雨提醒
 
