🐛 修复语法错误的bug

--- a/config.conf
+++ b/config.conf
@@ -173,7 +173,7 @@ https:\/\/cccat\.io url script-request-header https://raw.githubusercontent.com/
 [task_local]
 ## 什么值得买
 # https://github.com/blackmatrix7/ios_rule_script/tree/master/script/smzdm
-5 0 * * * https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/smzdm/smzdm_checkin.js, tag=什么值得买每日签到
+5 0 * * * https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/smzdm/smzdm_checkin.js, tag=什么值得买每日签到, enabled=true
 
 ## 滴滴出行
 # https://github.com/blackmatrix7/ios_rule_script/tree/master/script/didichuxing
